--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browserify": "^11.1.0",
     "chai": "^3.2.0",
     "chance": "^1.0.3",
+    "chroma-js": "^1.2.1",
     "cssnano": "^3.0.3",
     "del": "^2.0.2",
     "eslint": "^1.5.0",
