--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "lint": "eslint src app/js tools",
     "test": "mocha test --compilers js:babel/register",
     "build": "babel-node --eval \"require('./tools/build')().catch(err => console.error(err.stack))\"",
-    "start": "node server.js",
+    "start": "npm run build && node server.js",
     "dev": "babel-node tools/start",
     "publish": "build && cd build && git init && git add --all . && git commit --amend --no-edit && git push origin gh-pages -f"
   }
